<resources>
    <string name="app_name">seg-project-group72</string>
    <string name="usernameLabel">Username:</string>
    <string name="passwordLabel2" />
    <string name="passwordLabel">Password:</string>
    <string name="username">username</string>
    <string name="login">Sign In</string>
    <string name="register">Create an Account</string>
    <string name="emailLabel">Email:</string>
    <string name="registerButton">Register</string>
    <string name="switch1">Participant / Group Account</string>
    <string name="switchLabel">Participant / Group Account</string>
    <string name="profilecompbutton">Complete Profile</string>
</resources>